--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,13 @@
-User-agent: *
-Disallow: /discordicon.png
-Allow: /index.html
-Disallow: /Script.js
+Options -Indexes
+
+RewriteEngine On
+RewriteBase /
+
+RewriteCond %{SERVER_PORT} 80 
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,NE,L]
+
+RewriteRule ^404/?$$ error.html [L,NC]
+
+RewriteRule ^home/?$ index.php [L,NC]
+
+RewriteRule p/(.*)$ msub.php?page=$1 [L,NC,QSA]
